--- a/.env
+++ b/.env
@@ -18,3 +18,13 @@
 APP_ENV=dev
 APP_SECRET=ca1699a42414f6dde237fe6d37b89666
 ###< symfony/framework-bundle ###
+
+###> doctrine/doctrine-bundle ###
+# Format described at https://www.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
+# IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
+#
+# DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
+# DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8&charset=utf8mb4"
+# DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=16&charset=utf8"
+APP_DATABASE_DNS="pdo-mysql://yogurt:pAssw0rd%23@localhost:3306/ispring_practice"
+###< doctrine/doctrine-bundle ###
