--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,3 +1,27 @@
-#index:
-#    path: /
-#    controller: App\Controller\DefaultController::index
+index:
+    path: /
+    controller: App\Controller\ViewController::index
+
+signup-form:
+    path: /user/signup
+    controller: App\Controller\ViewController::signUpUserForm
+
+signin-form:
+    path: /user/signin
+    controller: App\Controller\ViewController::signInUserForm
+
+signup:
+    path: /signup
+    controller: App\Controller\UserController::signUpUser
+
+signin:
+    path: /signin
+    controller: App\Controller\UserController::signInUser
+
+signout:
+    path: /user/signout
+    controller: App\Controller\UserController::signOutUser
+
+show_menu:
+    path: /menu
+    controller: App\Controller\ViewController::showMenu
