misha-06-28-legend-screen добавил страницу с легендой

--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -29,3 +29,7 @@ show_menu:
 show_game:
     path: /game
     controller: App\Controller\ViewController::showGame
+
+show_legend:
+    path: /legend
+    controller: App\Controller\ViewController::showLegend
