misha-06-28-legend-screen сделал экраны победы и проигрыша

--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -37,3 +37,7 @@ show_legend:
 show_win:
     path: /win
     controller: App\Controller\ViewController::showWin
+
+show_lose:
+    path: /lose
+    controller: App\Controller\ViewController::showLose
