misha-06-26-login-signup доделал валидацию, добавил страницу 404

--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -2,6 +2,10 @@ index:
     path: /
     controller: App\Controller\ViewController::index
 
+error_not_found:
+    path: /error_not_found
+    controller: App\Controller\ViewController::showNotFoundException
+
 signup-form:
     path: /user/signup
     controller: App\Controller\ViewController::signUpUserForm
