2024-07-08-menu-improvements поменял очерёдность появления страницы с легендой. Переделал меню, добавил поле 'level' в таблицу

--- a/config/packages/twig.yaml
+++ b/config/packages/twig.yaml
@@ -5,5 +5,5 @@ when@test:
     twig:
         strict_variables: true
 
-framework:
-    error_controller: 'App\Controller\ErrorController::show'
+#framework:
+#    error_controller: 'App\Controller\ErrorController::show'
