2024-07-08-menu-improvements добавил иконки в меню

--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -61,3 +61,7 @@ choose_level:
 show_rating:
     path: /rating
     controller: App\Controller\ViewController::showRating
+
+show_lobby:
+    path: /lobby
+    controller: App\Controller\ViewController::showLobby
