2024-07-08-menu-improvements написал fetch для отправки количества очков в бд, написал ApiController

--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -65,3 +65,8 @@ show_rating:
 show_lobby:
     path: /lobby
     controller: App\Controller\ViewController::showLobby
+
+api_score:
+    path: /api/score
+    controller: App\Controller\ApiController::saveScore
+    methods: POST
