andrei-07-10-level-map-2 Добавил 2 уровень, настроил платформы на 2 уровне, чуток увеличил карту 1го уровня, подровняв платформы.

--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -30,9 +30,9 @@ show_menu:
     path: /menu
     controller: App\Controller\ViewController::showMenu
 
-show_game:
-    path: /game
-    controller: App\Controller\ViewController::showGame
+show_level:
+    path: /level{level}
+    controller: App\Controller\ViewController::showLevel
 
 show_legend:
     path: /legend
