--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -62,9 +62,21 @@ show_rating:
     path: /rating
     controller: App\Controller\ViewController::showRating
 
+create_lobby:
+    path: /lobby/create
+    controller: App\Controller\LobbyController::createLobby
+
+connect_lobby:
+    path: /lobby/connect{host}
+    controller: App\Controller\LobbyController::connectLobby
+
 show_lobby:
-    path: /lobby
+    path: /lobby{host}
     controller: App\Controller\ViewController::showLobby
+
+show_multiplayer:
+    path: /multiplayer
+    controller: App\Controller\ViewController::showMultiplayer
 
 api_score:
     path: /api/score
